tests/transpiler/x/java/binary_precedence.error
exit status 1
Main.java:4: error: bad operand types for binary operator '=='
        System.out.println((1 + 2 * 3 == null ? "nil" : 1 + 2 * 3));
                                      ^
  first type:  int
  second type: <null>
Main.java:5: error: bad operand types for binary operator '=='
        System.out.println(((1 + 2) * 3 == null ? "nil" : (1 + 2) * 3));
                                        ^
  first type:  int
  second type: <null>
Main.java:6: error: bad operand types for binary operator '=='
        System.out.println((2 * 3 + 1 == null ? "nil" : 2 * 3 + 1));
                                      ^
  first type:  int
  second type: <null>
Main.java:7: error: bad operand types for binary operator '=='
        System.out.println((2 * (3 + 1) == null ? "nil" : 2 * (3 + 1)));
                                        ^
  first type:  int
  second type: <null>
4 errors
