tests/transpiler/x/java/binary_precedence.java
// Generated by Mochi transpiler v0.10.31 on 2025-07-19 18:28:07 UTC
public class Main {
    public static void main(String[] args) {
        System.out.println((1 + 2 * 3 == null ? "nil" : 1 + 2 * 3));
        System.out.println(((1 + 2) * 3 == null ? "nil" : (1 + 2) * 3));
        System.out.println((2 * 3 + 1 == null ? "nil" : 2 * 3 + 1));
        System.out.println((2 * (3 + 1) == null ? "nil" : 2 * (3 + 1)));
    }
}
